@@ -2,15 +2,19 @@ package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.mapper.dto.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
+import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.model.dto.FilmDTO;
+import ru.yandex.practicum.filmorate.storage.catalog.CatalogStorage;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.util.Collection;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -18,51 +22,61 @@ public class FilmService {
 
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+    private final CatalogStorage catalogStorage;
 
-    public Film addFilm(Film film) {
-        Long id = createId();
+    public FilmDTO addFilm(FilmDTO dto) {
+        Film film = FilmMapper.mapToModel(dto);
+        checkCatalogsExistOrThrow(film);
+        Long id = filmStorage.upsert(film);
         film.setId(id);
-        film.setUserLikes(new HashSet<>());
-        filmStorage.upsert(film);
-        return film;
+        return FilmMapper.mapToDTO(film);
     }
 
-    public Film updateFilm(Film film) {
-        Film oldFilm = filmStorage.getFilm(film.getId());
-        Film result = update(oldFilm, film);
+    public FilmDTO updateFilm(FilmDTO dto) {
+        Film newFilm = FilmMapper.mapToModel(dto);
+        checkCatalogsExistOrThrow(newFilm);
+        Film oldFilm = filmStorage.getFilm(newFilm.getId());
+        Film result = update(oldFilm, newFilm);
         filmStorage.upsert(result);
-        return result;
+        return FilmMapper.mapToDTO(result);
     }
 
-    public Collection<Film> getFilms() {
-        return filmStorage.getFilms();
+    public Collection<FilmDTO> getFilms() {
+        return filmStorage.getFilms().stream()
+                .map(FilmMapper::mapToDTO)
+                .collect(Collectors.toList());
     }
 
-    public void like(Long filmId, Long userId) {
+    public FilmDTO getFilm(long filmId) {
+        Film film = filmStorage.getFilm(filmId);
+        return FilmMapper.mapToDTO(film);
+    }
+
+    public void like(long filmId, long userId) {
         User user = userStorage.getUser(userId);
         filmStorage.addLike(filmId, user.getId());
     }
 
-    public void removeLike(Long filmId, Long userId) {
+    public void removeLike(long filmId, long userId) {
         User user = userStorage.getUser(userId);
         filmStorage.removeLike(filmId, user.getId());
     }
 
-    public List<Film> getPopularFilms(int count) {
+    public List<FilmDTO> getPopularFilms(int count) {
         return filmStorage.getFilms()
                 .stream()
-                .sorted(Comparator.comparingInt(f -> -f.getUserLikes().size()))
+                .sorted(Comparator.comparingInt(f -> -f.getLikeCount()))
                 .limit(count)
-                .toList();
+                .map(FilmMapper::mapToDTO)
+                .collect(Collectors.toList());
     }
 
-    private long createId() {
-        long currentMaxId = filmStorage.getFilms()
-                .stream()
-                .map(Film::getId)
-                .max(Long::compareTo)
-                .orElse(0L);
-        return ++currentMaxId;
+    private void checkCatalogsExistOrThrow(Film film) {
+        List<Long> genreIds = film.getGenres().stream()
+                .map(Genre::getId)
+                .toList();
+        catalogStorage.checkGenresExistOrThrow(genreIds);
+        catalogStorage.checkMpaExistOrThrow(film.getMpa().getId());
     }
 
     private Film update(Film originalFilm, Film newFilm) {
@@ -72,7 +86,9 @@ public class FilmService {
                 .description(newFilm.getDescription() == null ? originalFilm.getDescription() : newFilm.getDescription())
                 .duration(newFilm.getDuration() == null ? originalFilm.getDuration() : newFilm.getDuration())
                 .releaseDate(newFilm.getReleaseDate() == null ? originalFilm.getReleaseDate() : newFilm.getReleaseDate())
-                .userLikes(originalFilm.getUserLikes())
+                .likeCount(originalFilm.getLikeCount())
+                .mpa(originalFilm.getMpa())
+                .genres(originalFilm.getGenres())
                 .build();
     }
 }
